fixing z-index bug with carrousel

--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -5,6 +5,7 @@
 .splide__slide {
   height: 100%;
   max-height: 360px;
+  z-index: 0;
 }
 
 /* Imagen se adapta al contenedor y se centra */
